--- a/style.css
+++ b/style.css
@@ -68,15 +68,19 @@ nav ul li a {
 .hero {
     background: linear-gradient(to right, #00264d, #660066);
     color: white;
-    padding: 50px 20px;
     text-align: center;
+    position: relative;
+    height: 200px;
+    overflow: hidden;
 }
 .hero h1 {
-    font-size: 48px;
-    margin-bottom: 10px;
+    font-size: 36px; 
+    margin-bottom: -30px;
+    line-height: 100px;
 }
 .hero p {
-    font-size: 24px;
+    font-size: 18px; 
+    margin-to;
 }
 .container {
     max-width: 1500px;
@@ -88,11 +92,7 @@ nav ul li a {
     font-size: 24px;
     font-weight: bold;
 }
-.hero {
-    position: relative;
-    height: 600px;
-    overflow: hidden;
-}
+
 .slide {
     position: absolute;
     top: 0;
@@ -217,12 +217,6 @@ main {
     object-fit: cover;
     border-radius: 4px;
     margin-bottom: 10px;
-}
-.cart {
-    background-color: white;
-    border: 1px solid #ddd;
-    padding: 1em;
-    margin-top: 2em;
 }
 button {
     background-color: var(--amazon-orange);
